# terminal-editor

./: CMakeLists.txt  README.md  main  main.cpp  script.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: Editor.cpp  Resize.cpp  TerminalEditor.cpp  main.cpp
